fix reading guide spacing issue

--- a/css/nousaccess.css
+++ b/css/nousaccess.css
@@ -94,23 +94,23 @@ body.darkmode button i {
 }
 
 body.darkmode,
-body.darkmode article, 
+body.darkmode article,
 body.darkmode aside,
-body.darkmode footer, 
-body.darkmode header, 
-body.darkmode a, 
-body.darkmode i, 
-body.darkmode .link, 
-body.darkmode nav, 
+body.darkmode footer,
+body.darkmode header,
+body.darkmode a,
+body.darkmode i,
+body.darkmode .link,
+body.darkmode nav,
 body.darkmode div,
 body.darkmode ol,
-body.darkmode span, 
+body.darkmode span,
 body.darkmode svg,
-body.darkmode h1, 
-body.darkmode h2, 
-body.darkmode h3, 
-body.darkmode h4, 
-body.darkmode h5, 
+body.darkmode h1,
+body.darkmode h2,
+body.darkmode h3,
+body.darkmode h4,
+body.darkmode h5,
 body.darkmode h6,
 body.darkmode p {
     color: #fff !important;
@@ -141,27 +141,27 @@ body.contrast {
     color: #6b6a6a!important;
 }
 
-body.contrast div:not(.position-fixed), 
+body.contrast div:not(.position-fixed),
 body.contrast #accessibility,
-body.contrast article, 
-body.contrast aside, 
-body.contrast footer, 
-body.contrast header, 
-body.contrast li, 
-body.contrast main, 
-body.contrast nav, 
-body.contrast ol, 
-body.contrast section, 
-body.contrast svg, 
-body.contrast a, 
+body.contrast article,
+body.contrast aside,
+body.contrast footer,
+body.contrast header,
+body.contrast li,
+body.contrast main,
+body.contrast nav,
+body.contrast ol,
+body.contrast section,
+body.contrast svg,
+body.contrast a,
 body.contrast span,
-body.contrast h1, 
-body.contrast h2, 
-body.contrast h3, 
-body.contrast h4, 
-body.contrast h5, 
-body.contrast h6, 
-body.contrast p, 
+body.contrast h1,
+body.contrast h2,
+body.contrast h3,
+body.contrast h4,
+body.contrast h5,
+body.contrast h6,
+body.contrast p,
 body.contrast img,
 body.contrast video {
     filter: grayscale(100%) contrast(100%);
@@ -169,26 +169,26 @@ body.contrast video {
 
 /* Big Cursor */
 body.cursormode,
-body.cursormode article, 
-body.cursormode aside, 
-body.cursormode footer, 
-body.cursormode header, 
-body.cursormode li, 
-body.cursormode main, 
-body.cursormode nav, 
-body.cursormode ol, 
-body.cursormode section, 
-body.cursormode a, 
-body.cursormode a:hover, 
-body.cursormode a:focus, 
-body.cursormode a:active, 
-body.cursormode span, 
-body.cursormode h1, 
-body.cursormode h2, 
-body.cursormode h3, 
-body.cursormode h4, 
-body.cursormode h5, 
-body.cursormode h6, 
+body.cursormode article,
+body.cursormode aside,
+body.cursormode footer,
+body.cursormode header,
+body.cursormode li,
+body.cursormode main,
+body.cursormode nav,
+body.cursormode ol,
+body.cursormode section,
+body.cursormode a,
+body.cursormode a:hover,
+body.cursormode a:focus,
+body.cursormode a:active,
+body.cursormode span,
+body.cursormode h1,
+body.cursormode h2,
+body.cursormode h3,
+body.cursormode h4,
+body.cursormode h5,
+body.cursormode h6,
 body.cursormode p,
 body.cursormode button:hover,
 body.cursormode img,
@@ -234,6 +234,6 @@ body.headingmode h6 {
     height: 2px;
     background-color: #683091;
     z-index: 99999999;
-    top: 0;
+    top: -113px;
 }
 /* Accessibility */
